<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/query_countries"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_main_query"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:digits="@string/allow_charactere_edittext"
            android:inputType="text"
            android:padding="5sp"
            android:hint="@string/hint_search"
            android:background="@drawable/black_border"
            />

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp"
            />

        <Button
            android:id="@+id/btn_main_search"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:enabled="false"
            />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="50dp"
        />

    <TextView
        android:id="@+id/tv_main_result_title"
        android:text="@string/result_none"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ListView
        android:id="@+id/lv_main_result_countries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

</LinearLayout>